# Steam-Helper

./: CMakeLists.txt
include/: compare.h  inventory.h  steam.h
src/: compare.cpp  inventory.cpp  main.cpp  steam.cpp
